--- a/Index.ipynb
+++ b/Index.ipynb
@@ -8,13 +8,35 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "improves your first _30 minutes_ each day"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CONTAINER ID        IMAGE               COMMAND                  CREATED             STATUS              PORTS                    NAMES\n",
+      "b24085e77b6b        think/notebook      \"/bin/notebook --i...\"   21 seconds ago      Up 20 seconds       0.0.0.0:8888->8888/tcp   notebook\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%sh\n",
+    "\n",
+    "docker ps"
+   ]
   },
   {
    "cell_type": "code",
