--- a/Index.ipynb
+++ b/Index.ipynb
@@ -58,27 +58,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img width=\"200px\" height=\"200px\" src=\"/files/images/sad.jpg\" />\n"
+    "<img width=\"200px\" height=\"200px\" src=\"/files/images/sad2.jpg\" />\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sh: ./analyze: not found\n"
+      "TimeStamp,faceId,interocularDistance,glasses,age,ethnicity,gender,dominantEmoji,pitch,yaw,roll,joy,fear,disgust,sadness,anger,surprise,contempt,valence,engagement,smile,innerBrowRaise,browRaise,browFurrow,noseWrinkle,upperLipRaise,lipCornerDepressor,chinRaise,lipPucker,lipPress,lipSuck,mouthOpen,smirk,eyeClosure,attention,eyeWiden,cheekRaise,lidTighten,dimpler,lipStretch,jawDrop,relaxed,smiley,laughing,kissing,disappointed,rage,smirk,wink,stuckOutTongueWinkingEye,stuckOutTongue,flushed,scream,\n",
+      "0.0000nan,nan,no,unknown,unknown,unknown,unknown,nan,nan,nan,nan,nan,nan,nan,nan,nan,nan,nan,nan,nan,nan,nan,nan,nan,nan,nan,nan,nan,nan,nan,nan,nan,nan,nan,nan,nan,nan,nan,nan,nan,nan,nan,nan,nan,nan,nan,nan,nan,nan,nan,nan,nan,\n"
      ]
     }
    ],
    "source": [
     "%%sh\n",
-    "./analyze images/sad.jpg"
+    "./analyze images/sad2.jpg"
    ]
   },
   {
@@ -86,6 +87,27 @@
    "metadata": {},
    "source": [
     "<img width=\"200px\" height=\"200px\" src=\"/files/images/happy.jpg\" />\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TimeStamp,faceId,interocularDistance,glasses,age,ethnicity,gender,dominantEmoji,pitch,yaw,roll,joy,fear,disgust,sadness,anger,surprise,contempt,valence,engagement,smile,innerBrowRaise,browRaise,browFurrow,noseWrinkle,upperLipRaise,lipCornerDepressor,chinRaise,lipPucker,lipPress,lipSuck,mouthOpen,smirk,eyeClosure,attention,eyeWiden,cheekRaise,lidTighten,dimpler,lipStretch,jawDrop,relaxed,smiley,laughing,kissing,disappointed,rage,smirk,wink,stuckOutTongueWinkingEye,stuckOutTongue,flushed,scream,\n",
+      "0.0000,0,60.9951,no,under 18,caucasian,female,StuckOutTongue,-8.0137,-2.6438,-14.6491,97.4306,0.0006,0.0003,0.0000,0.0000,72.4136,0.0001,99.9979,100.0000,99.9951,0.0000,100.0000,0.0000,0.0001,0.0023,0.0000,0.0012,0.0000,0.0014,0.0004,38.6029,0.0007,0.0000,97.9593,100.0000,0.0691,0.0000,12.1845,0.4122,39.5899,3.2852,0.0066,0.0000,0.0018,0.0018,0.0000,0.0000,0.0018,2.2977,99.9996,56.3166,24.4674,\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%sh\n",
+    "./analyze images/happy.jpg"
    ]
   },
   {
