--- a/Index.ipynb
+++ b/Index.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Good Morning"
+    "# Good Morning World"
    ]
   },
   {
@@ -17,34 +17,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CONTAINER ID        IMAGE               COMMAND                  CREATED             STATUS              PORTS                    NAMES\n",
-      "b24085e77b6b        think/notebook      \"/bin/notebook --i...\"   21 seconds ago      Up 20 seconds       0.0.0.0:8888->8888/tcp   notebook\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%sh\n",
-    "\n",
-    "docker ps"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Motivation\n",
     "\n",
-    "..."
+    "Every night is different.\n",
+    "When you slept good, you need another coffee as when you didn't sleep well.\n",
+    "_Good Morning World_ aims to fill this gap."
    ]
   },
   {
@@ -58,12 +38,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img width=\"200px\" height=\"200px\" src=\"/files/images/sad2.jpg\" />\n"
+    "<img width=\"200px\" height=\"200px\" src=\"/files/images/sad.jpg\" />\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -73,13 +53,13 @@
      "output_type": "stream",
      "text": [
       "TimeStamp,faceId,interocularDistance,glasses,age,ethnicity,gender,dominantEmoji,pitch,yaw,roll,joy,fear,disgust,sadness,anger,surprise,contempt,valence,engagement,smile,innerBrowRaise,browRaise,browFurrow,noseWrinkle,upperLipRaise,lipCornerDepressor,chinRaise,lipPucker,lipPress,lipSuck,mouthOpen,smirk,eyeClosure,attention,eyeWiden,cheekRaise,lidTighten,dimpler,lipStretch,jawDrop,relaxed,smiley,laughing,kissing,disappointed,rage,smirk,wink,stuckOutTongueWinkingEye,stuckOutTongue,flushed,scream,\n",
-      "0.0000nan,nan,no,unknown,unknown,unknown,unknown,nan,nan,nan,nan,nan,nan,nan,nan,nan,nan,nan,nan,nan,nan,nan,nan,nan,nan,nan,nan,nan,nan,nan,nan,nan,nan,nan,nan,nan,nan,nan,nan,nan,nan,nan,nan,nan,nan,nan,nan,nan,nan,nan,nan,nan,\n"
+      "0.0000,0,59.4138,no,55-64,caucasian,male,Disappointed,-9.4152,16.3272,-15.0948,0.0018,0.0002,0.4339,0.2967,0.1836,0.1882,0.1939,-100.0000,0.3193,0.0000,0.0053,0.0000,0.3193,0.1624,0.0021,100.0000,99.9997,0.1823,0.4404,0.0526,0.0004,0.0045,0.0000,75.6678,0.0000,0.0000,0.1559,0.0000,0.0000,2.9230,0.0018,0.0018,0.0018,0.0018,99.9265,0.1836,0.0000,0.0023,2.2978,2.2978,0.0018,0.0311,\n"
      ]
     }
    ],
    "source": [
     "%%sh\n",
-    "./analyze images/sad2.jpg"
+    "./analyze images/sad.jpg"
    ]
   },
   {
@@ -111,13 +91,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## Try it out\n",
+    "\n",
+    "Upload your picture <a href=\"/tree/images\">here</a>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "%%sh\n",
+    "./analyze images/your_image.jpg"
+   ]
   }
  ],
  "metadata": {
